...
                                },
                            ) {
                                Icon(Icons.AutoMirrored.Filled.Chat, contentDescription = null)
                            }
                        },
                        label = { Text(stringResource(Res.string.messages)) },
                        modifier = Modifier.testTag("main_messagesTab"),
                    )
                }
                NavigationBarItem(
                    selected = selectedTab == BottomNavTab.Profile,
                    onClick = { selectedTabName = BottomNavTab.Profile.name },
                    icon = { Icon(Icons.Default.Person, contentDescription = null) },
                    label = { Text(stringResource(Res.string.profile)) },
                    modifier = Modifier.testTag("main_profileTab"),
                )
            }
        },
        floatingActionButton = {
            when (selectedTab) {
                BottomNavTab.Rooms -> {
...
